changed component name

--- a/components/tap-gui.yaml
+++ b/components/tap-gui.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: tap-gui-component
+  name: rtsmagnuskronander-repo-tap-gui-component
   description: Tanzu Application Platform GUI Component
   tags:
     - v1alpha1
