--- a/components/navinvoice-feature-9.yaml
+++ b/components/navinvoice-feature-9.yaml
@@ -1,15 +1,15 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: tap-gui-component
+  name: navinvoice-feature-9
   description: Tanzu Application Platform GUI Component
   tags:
     - v1alpha1
   annotations:
-    'backstage.io/kubernetes-label-selector': 'app=backstage'
+    "backstage.io/kubernetes-label-selector": "app.kubernetes.io/part-of=navinvoice-feature-9"
     'backstage.io/techdocs-ref': dir:.
 spec:
   type: service
-  lifecycle: production
-  owner: default-team
-  system: tap-gui
+  lifecycle: experimental
+  owner: modern-apps
+  system: rtsvl
